[package]
name = "soroban-ret-web"
description = "Dev Tools backend for the Soroban Security Portal: compile Rust -> WASM, disassemble WASM with soroban-ret, fetch on-chain contracts by address"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "Apache-2.0"
publish = false

[[bin]]
name = "soroban-ret-web"
path = "src/main.rs"

[dependencies]
soroban-ret = { version = "0.0.2", features = ["wasmprinter"] }
stellar-xdr = { version = "26.0.1", default-features = false, features = ["curr", "std", "base64"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
